force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/List_Price_Sales_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Sales_Price_Discount__c</fullName>
    <formula>(( PricebookEntry.UnitPrice - UnitPrice)/ PricebookEntry.UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price/Sales Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>