force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/Overall_Discount__c.field-meta.xml
<CustomField>
    <fullName>Overall_Discount__c</fullName>
    <formula>IF(
  AND(Quote_Discount__c &lt;&gt; 0, List_Price_Sales_Price_Discount__c = 0),
  Quote_Discount__c,
  IF(
    AND(Quote_Discount__c = 0, List_Price_Sales_Price_Discount__c &lt;&gt; 0),
    List_Price_Sales_Price_Discount__c,
    IF(
      AND(Quote_Discount__c &lt;&gt; 0, List_Price_Sales_Price_Discount__c &lt;&gt; 0),
      ((Quote_Subtotal__c -  QLI_Total_Price__c ) / Quote_Subtotal__c),
      0
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>