force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/QLI_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>QLI_Total_Price__c</fullName>
    <label>Basic Unit Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>