force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/QLI_Total_Price_Temp__c.field-meta.xml
<CustomField>
    <fullName>QLI_Total_Price_Temp__c</fullName>
    <description>Here we calculate total amount after discounts</description>
    <formula>(UnitPrice - (ROUND(UnitPrice * Quote_Discount__c, 2))) * (1 - ( PPD__c +  VD__c +  SPL_DISCOUNT__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>