force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/Quote_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subtotal__c</fullName>
    <formula>Quantity *  PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>