force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/Taxable_Value_Temp__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Value_Temp__c</fullName>
    <formula>Quantity *    QLI_Total_Price_Temp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Value Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>