force-app/force-app/force-app/main/default/objects/QuoteLineItem/fields/Total_List_Price_tEMP__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price_tEMP__c</fullName>
    <label>Total List Price tEMP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>